@@ -3,18 +3,16 @@ package com.schbrain.framework.autoconfigure.starrocks.operation;
 import com.schbrain.common.util.ValidateUtils;
 import com.schbrain.framework.autoconfigure.starrocks.annotation.StarrocksTable;
 import com.schbrain.framework.autoconfigure.starrocks.properties.StarrocksProperties;
-import com.zaxxer.hikari.HikariConfig;
-import com.zaxxer.hikari.HikariDataSource;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.ResolvableType;
-import org.springframework.jdbc.core.*;
+import org.springframework.jdbc.core.BeanPropertyRowMapper;
+import org.springframework.jdbc.core.namedparam.*;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
-import static com.schbrain.framework.autoconfigure.starrocks.constants.StarrocksConstants.JDBC_URL_TEMPLATE;
 import static com.schbrain.framework.autoconfigure.starrocks.constants.StarrocksConstants.STREAM_LOAD_TEMPLATE;
 
 /**
@@ -28,8 +26,10 @@ public class StarrocksServiceImpl<T> implements StarrocksService<T>, Initializin
 
     @Autowired
     protected StarrocksProperties config;
+    @Autowired
+    @Qualifier("starrocksJdbcTemplate")
+    protected NamedParameterJdbcTemplate jdbcTemplate;
 
-    protected JdbcTemplate jdbcTemplate;
     protected StarrocksStreamLoadHandler handler;
 
     @SuppressWarnings({"unchecked", "DataFlowIssue"})
@@ -44,13 +44,13 @@ public class StarrocksServiceImpl<T> implements StarrocksService<T>, Initializin
     }
 
     @Override
-    public void upsert(T entity, List<String> columns) {
-        upsertBatch(List.of(ValidateUtils.notNull(entity, "entity不能为空")), columns);
+    public void upsertBatch(List<T> entityList) {
+        upsertBatch(entityList, Collections.emptyList());
     }
 
     @Override
-    public void upsertBatch(List<T> entityList) {
-        upsertBatch(entityList, Collections.emptyList());
+    public void upsert(T entity, List<String> columns) {
+        upsertBatch(List.of(ValidateUtils.notNull(entity, "entity不能为空")), columns);
     }
 
     @Override
@@ -69,30 +69,26 @@ public class StarrocksServiceImpl<T> implements StarrocksService<T>, Initializin
     }
 
     @Override
-    public List<T> search(PreparedStatementCreator callback) {
-        return jdbcTemplate.queryForStream(callback, rowMapper).collect(Collectors.toList());
+    public List<T> search(String sql, Map<String, Object> params) {
+        SqlParameterSource parameterSource;
+        if (params.isEmpty()) {
+            parameterSource = EmptySqlParameterSource.INSTANCE;
+        } else {
+            parameterSource = new MapSqlParameterSource(params);
+        }
+        // noinspection SqlSourceToSinkFlow 关掉idea sql注入检查
+        return jdbcTemplate.queryForStream(sql, parameterSource, rowMapper).collect(Collectors.toList());
     }
 
     @Override
     public void afterPropertiesSet() {
         StarrocksTable annotation = ValidateUtils.notNull(entityClass.getAnnotation(StarrocksTable.class), StarrocksTable.class.getName() + "不能为空");
         this.handler = createHandler(annotation.value());
-        this.jdbcTemplate = createJdbcTemplate(annotation.value());
     }
 
     protected StarrocksStreamLoadHandler createHandler(String tableName) {
         String streamLoadUrl = String.format(STREAM_LOAD_TEMPLATE, config.getHost(), config.getHttpPort(), config.getDatabase(), tableName);
         return new StarrocksStreamLoadHandler(streamLoadUrl, config.getUsername(), config.getPassword());
-    }
-
-    protected JdbcTemplate createJdbcTemplate(String tableName) {
-        HikariConfig hikariConfig = new HikariConfig();
-        hikariConfig.setPoolName(String.format("%s:%s", config.getDatabase(), tableName));
-        hikariConfig.setDriverClassName(config.getDriverClassName());
-        hikariConfig.setJdbcUrl(String.format(JDBC_URL_TEMPLATE, config.getHost(), config.getPort(), config.getDatabase()));
-        hikariConfig.setUsername(config.getUsername());
-        hikariConfig.setPassword(config.getPassword());
-        return new JdbcTemplate(new HikariDataSource(hikariConfig));
     }
 
 }
